--- a/modules/upload/分块上传/index.html
+++ b/modules/upload/分块上传/index.html
@@ -4,17 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>分块(即分片)上传</title>
+    <title>分块(即分片)/断点续传上传</title>
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.js"></script>
 </head>
 
 <body>
     <input type="file" id="fileInput">
+    <progress value="0" max="100" id="progress"></progress>
     <button onclick="upload()">上传文件</button>
     <script>
         // NOTE: 分块上传优势: 较少内存占用,实现断点续传,并发处理,利用带宽,提高效率
         // 不足支处: 增加复杂性,增加额外计算存储
         // 应用场景: 云存储大文件上传/多媒体视频音频上传/需断点续传的应用
+
+        // 浏览器调试: 打开4G网 -> 重新刷新页面 -> 继续选择同一个文件上传
 
         async function upload() {
             const fileInput = document.getElementById("fileInput");
@@ -24,6 +27,18 @@
             const totalChunks = Math.ceil(file.size / chunkSize) // 计算总块数
 
             let currentChunk = 0
+
+            /* *********************断点续传************************* */
+            const resumeKey = file.name + '-currentChunk'
+            const resumeIndex = localStorage.getItem(resumeKey)
+            if (resumeIndex != null) {
+                // 上次上传未完成, 从断点续传上传
+                currentChunk = parseInt(resumeIndex)
+            } else {
+                // 上次上传已完成或没有断点记录,重新上传
+                localStorage.removeItem(resumeKey)
+            }
+            /* *********************断点续传************************* */
 
             while (currentChunk < totalChunks) {
                 const start = currentChunk * chunkSize
@@ -39,11 +54,20 @@
                 formData.append('currentChunk', currentChunk)
 
                 try {
-                    await axios.post('http://localhost:3000/upload', formData, {
+                    const response = await axios.post('http://localhost:3000/upload', formData, {
                         headers: {
                             'content-type': 'multipart/form-data'
                         }
                     })
+
+                    const { progress } = res.data
+
+                    document.getElementById('progress').value = progress
+
+                    /**************断点续传********************/
+                    // 保存当前分块的索引到localStorage
+                    localStorage.setItem(resumeKey, currentChunk)
+                    /**************断点续传********************/
                 } catch (error) {
                     console.log(error)
                     return
@@ -51,6 +75,11 @@
 
                 currentChunk++
             }
+
+            /**************断点续传********************/
+            // 上传完成后,移除localStorage中的分块索引
+            localStorage.removeItem(resumeKey)
+            /**************断点续传********************/
 
             try {
                 const postData = { fileName: file.name, totalChunks } // 构造合并请求的数据
